--- a/public/profile.html
+++ b/public/profile.html
@@ -73,7 +73,7 @@
      <br>
     
     <div class="my_pic">
-      <img id="pimages" class="profile_pic" src= './public/images/me.png' </img>
+      <img id="pimages" class="profile_pic" src= 'images/me.png' </img>
     </div>
 
     <br>
