about me update

--- a/public/profile.html
+++ b/public/profile.html
@@ -80,7 +80,7 @@
 
 
     <div class="paragraphs">
-     <p>Hi, my name is Shahana Bhattacharya. I am former Sales Assistant who is just now entering the tech scene. I have just completed a 9-week coding bootcamp at Wyncode in Wynwood, Miami where I learned to be a full-stack Ruby on Rails developer. I hope to continue learning and practicing code, and I am currently looking for opportunities to utilize my new-found skills. </p>
+     <p>Hi, my name is Shahana Bhattacharya. I am a former Sales Assistant who is just now entering the tech scene. I have just completed an intensive accelerated program at Wyncode in Wynwood, Miami where I learned to be a full-stack Ruby on Rails developer. I hope to continue learning and practicing code, and I am looking for opportunities to utilize my new-found skills. </p>
      </div>
 </div>
 
