--- a/public/profile.html
+++ b/public/profile.html
@@ -62,7 +62,7 @@
 
 <body>
 
-<header>
+<main>
 
 <div id="demo"></div>
   <div class= "header col-xs-8 col-sm-4 col-md-4 col-lg-4 col-lg-offset-2">
@@ -87,7 +87,7 @@
      <br>
 
   </div>
-</header>
+</main>
 
 </div>
 </body>
